successfully completed anyhow

--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
 body {
     background: #10101B;
     height: 100vh;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 .container {
     margin-top: 30px;
@@ -41,6 +48,9 @@ input[type='text']{
     border: 2px solid #858299;
     height: 50px;
     padding: 10px;
+    text-align: center;
+    letter-spacing:3px ;
+    font-size: 25px;
 }
 input[type='text']:focus {
     background-color: #3D4153;
@@ -76,6 +86,9 @@ margin-right: -4px;
 border-radius: 10px;
 cursor: pointer;
 }
+.button:hover{
+background: #343e4d;   
+}
 .blink-me {
 color: #E0B612;
 }
@@ -86,6 +99,9 @@ color: #E0B612;
     border-radius: 5px;
     background: #495BC3;
     color: #fff;
+}
+.submit-btn:hover{
+    background: #364491;
 }
 .notify {
     color: #fff;
@@ -103,4 +119,14 @@ color: #E0B612;
 .action-left {
     color: #FF3C5F;
     margin-top: 10px;
+    cursor: pointer;
 }
+#sorry-msg{
+    align-items: center;
+    font-size: 35px;
+    position: relative;
+    top: 245px;
+    color: rgb(238, 65, 65);
+}
+
+
